err/mixcoatl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/mixcoatl'...
Listing './lib/python3.5/site-packages/mixcoatl/admin'...
Listing './lib/python3.5/site-packages/mixcoatl/analytics'...
Listing './lib/python3.5/site-packages/mixcoatl/automation'...
Compiling './lib/python3.5/site-packages/mixcoatl/automation/configuration_management_service.py'...
***   File "./lib/python3.5/site-packages/mixcoatl/automation/configuration_management_service.py", line 84
    print json.dumps(payload)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mixcoatl/config'...
Compiling './lib/python3.5/site-packages/mixcoatl/config/__init__.py'...
***   File "./lib/python3.5/site-packages/mixcoatl/config/__init__.py", line 41
    print ">>> Type", cfg_num, "for", i.replace(self.mixcoatl_dir + "/", "").replace(".config", "")
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mixcoatl/decorators'...
Compiling './lib/python3.5/site-packages/mixcoatl/decorators/lazy.py'...
***   File "./lib/python3.5/site-packages/mixcoatl/decorators/lazy.py", line 34
    raise AttributeError, "unknown attribute %s" % myname
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mixcoatl/exceptions'...
Listing './lib/python3.5/site-packages/mixcoatl/geography'...
Listing './lib/python3.5/site-packages/mixcoatl/infrastructure'...
Compiling './lib/python3.5/site-packages/mixcoatl/infrastructure/volume.py'...
***   File "./lib/python3.5/site-packages/mixcoatl/infrastructure/volume.py", line 370
    except SnapshotException, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mixcoatl/network'...
Listing './lib/python3.5/site-packages/mixcoatl/platform'...
Compiling './lib/python3.5/site-packages/mixcoatl/resource.py'...
***   File "./lib/python3.5/site-packages/mixcoatl/resource.py", line 438
    print "Missing key found when loading class %s with primary key %s: %s" % \
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mixcoatl/settings'...
Listing './lib/python3.5/site-packages/mixcoatl-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xmltodict-0.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
